gui/admin-gui/src/frontend/scss/_midpoint.scss
/* ... */
.modal-backdrop {
  z-index: 1040 !important;
}

// End of MID-10513 fix

.changed-item-panel-value > p {
  margin: 0;
}

// MID-10315 add minimum width for object name
.name-min-width {
  min-width: 300px;
}

//start .select2 overrides
.select2-prepend .select2-selection {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  min-height: 38px;
}

.select2-selection__choice:focus {
  outline: 2px solid #2684FF;
  outline-offset: 2px;
}

.select2-selection__clear {
  max-height: 20px;
  display: flex;
  align-items: center;
  margin-top: 2px;
}

.select2-selection__clear:focus {
  outline: none;
  box-shadow: 0 0 0 2px #ffa836;
}

.select2-container--bootstrap-5 .select2-selection--multiple {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding-bottom: 0px;
}

.select2-container--bootstrap-5 .select2-selection--multiple .select2-search--inline {
  width: auto !important;
  flex: 1 1 auto;
  min-width: 60px;
  margin-bottom: 0.375rem;
}
//end .select2 overrides

//.bootstrap-multiselect overrides
.multiselect-native-select .dropdown .dropdown-menu {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
}

.help-icon-after-label {
  float: left;
  margin-left: 5px;
}

.bs-stepper-header .step {
  margin: 5px;
}

.bg-light-purple {
  background-color: #f9f2ff;
}

.bg-light-danger {
  background-color: #fff7f7;
}

.bg-light-info {
  background-color: #f4f8fa;
}

.bg-light-secondary {
  background-color: #f4f4f4;
}

.collapsed-wizard-panel {
  height: 100%;

  .fake-panel {
    width: 50px;
  }

  .collapsed-wizard-container {
    @extend .bg-white;
    height: 100%;

    &:has(.selected) {
      position: absolute;
      right: 0px;
    }

    .collapsed-menu {
      @extend .border-start;
      width: 50px;

      .collapsed-menu-icon {
        @extend .rounded;
        height: 42px;
        width: 42px;

        &:hover {
          @extend .bg-primary-200;
        }
      }

      .selected, .selected:hover {
        @extend .text-primary;
        @extend .bg-primary-100;
      }

      .badge-parent {
        position: relative;
      }

      .badge {
        @extend .px-1;
        padding-bottom: 2px !important;
        padding-top: 2px !important;
        right: 3px;
        top: -39px;
        position: absolute;
        pointer-events: none;
      }

    }

    .collapsed-details-panel {
      @extend .border-start;
      @extend .p-2;
      width: 350px;
      height: 100%;
    }
  }
}

.fw-semibold {
  font-weight: 600 !important;
}

.text-help > p {
  margin-bottom: .25rem;
}

.right-sidebar-help {
  @extend .bg-white;
  @extend .border-start;
  width: 350px;

  > .header {
    @extend .border-bottom;
    @extend .p-3;
  }

  > .body {
    @extend .p-3;
  }
}

//Wizard stepper button navigation scaling
.wizard-actions-strip {
  .wizard-actions-container {
    flex-shrink: 1;
    flex-grow: 0;

    &:first-child {
      flex-grow: 1;
    }

    &:only-child {
      flex-grow: 1;
    }
    &:last-child, &:only-child {
      display: flex;
      justify-content: flex-end;
    }
  }
  &.only-child-centered .wizard-actions-container {
    &:only-child {
      display: flex;
      justify-content: center;
    }
  }
  &.only-child-start .wizard-actions-container {
      &:only-child {
        display: flex;
        justify-content: left;
      }
    }
}

